Bug: PRD Reviewer: Peter Comment: Prepare for Landing Page seminar. Fix style on IE, Add "Publish" workflow.

--- a/ssf/web/docroot/css/mashup.css
+++ b/ssf/web/docroot/css/mashup.css
@@ -5,6 +5,7 @@
 
 table.ss_mashup {
   padding: 0px;
+  text-align:left !important;
 }
 
 .ss_mashup_canvas_view {
