--- a/ssf/web/docroot/css/mashup_dark.css
+++ b/ssf/web/docroot/css/mashup_dark.css
@@ -6,6 +6,7 @@
 table.ss_mashup {
   padding: 0px;
   background: #E3E3E3;
+  text-align:left !important;
 }
 
 .ss_mashup_canvas_view {
